--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query-devtools": "^5.62.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
     "emoji-mart": "^5.6.0",
     "input-otp": "^1.4.2",
