--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-query-devtools": "^5.62.15",
+    "@types/lodash": "^4.17.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.3",
     "emoji-mart": "^5.6.0",
     "input-otp": "^1.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
