--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.2.3",
     "emoji-mart": "^5.6.0",
+    "html-react-parser": "^5.2.2",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
