--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-query-devtools": "^5.62.15",
     "@types/lodash": "^4.17.14",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.3",
